# quantiq

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  backtest_strategy.py  dhan.py  dhan_engine.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  task.md
.github/scripts/: create_labels.sh  issues_generation.sh
docs/: CNAME  github.html  index.html  strategy_v1.md  strategyspec_AV.md  strategyspec_GT.md  strategyspec_SS.md
docs/reference/: QuantIQ_Master_Reference.md  README.md
members/: Rohan.md  Samarth.md  TEMPLATE.md  Tanwani.md  aaditya.md  aagam.md  atharv.md  ayam.md  eknoor.md  guneet.md  nikhil.md  nikshr.md  sanvi.md  shubhakshi.md  tanwani.md
notebooks/: market_analysis.ipynb
scripts/: AJ.py  AK.py  AR.py  AV.py  EB.py  GT.py  NS.py  RS.py  RT.py  samarth.py  sanvisinha957.py  shubhakshi.py
src/: __init__.py
src/data/: __init__.py  fetch.py  indicator.py  indicators.py  rsi_indicator.py  ticker_map.py  validate.py  visualise.py
src/execution/: alerts.py  bot.py  dhan_client.py  logger.py  order_manager.py  websocket_feed.py
src/screener/: cache.py  config.py  engine.py  runner.py
src/screener/filters/: fundamental.py  technical.py
src/strategy/: base.py  rsi_mean_reversion.py  runner.py  signals.py  sma_crossover.py  triple_filter.py
src/watchlist/: dynamic.py  manager.py  persistence.py  static.py
temp/: test_visualise.py
